--- a/notifications/options.html
+++ b/notifications/options.html
@@ -9,20 +9,21 @@
 -->
 <!doctype html>
 <html>
+  <meta charset='utf-8'>
   <head>
-    <title>Notification Demo</title>
+    <title>桌面通知</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="options.js"></script>
   </head>
   <body>
     <h1>
       <img src="64.png" alt="Toast">
-      Notification Demo
+      桌面通知
     </h1>
     <h2>Options</h2>
     <form id="options">
       <input type="checkbox" name="isActivated" checked>
-      Display a notification every
+     显示通知每
       <select name="frequency">
         <option>1</option>
         <option>2</option>
@@ -35,7 +36,7 @@
         <option>25</option>
         <option>30</option>
       </select>
-      minute(s).
+      分钟(s).
     </form>
   </body>
 </html>
