--- a/notifications/options.html
+++ b/notifications/options.html
@@ -1,12 +1,3 @@
-<!--
-  Copyright (c) 2012 The Chromium Authors. All rights reserved.
-  Use of this source code is governed by a BSD-style license that can be
-  found in the LICENSE file.
-
-  Brian Kennish <bkennish@chromium.org>
-
-  An option page for configuring notifications.
--->
 <!doctype html>
 <html>
   <meta charset='utf-8'>
@@ -35,6 +26,7 @@
         <option>20</option>
         <option>25</option>
         <option>30</option>
+        <option>60</option>
       </select>
       分钟(s).
     </form>
